[gd_scene load_steps=12 format=3 uid="uid://djsxylqnw8otj"]

[ext_resource type="Theme" uid="uid://bg42c3x4ca1wd" path="res://Art/Themes/TooltipTheme.tres" id="1_bsj2h"]
[ext_resource type="Script" path="res://Scenes/CardGame/UI/card_ui.gd" id="1_uy134"]
[ext_resource type="Resource" uid="uid://chg2wxd3luc4p" path="res://Scenes/CardGame/Characters/Mao/Cards/bonk.tres" id="2_sqx86"]
[ext_resource type="Theme" uid="uid://c0vtvronru7hd" path="res://Art/Themes/CardTextLabelTheme.tres" id="4_6q1sy"]
[ext_resource type="Theme" uid="uid://bnlcgnbtphivy" path="res://Art/Themes/CardNameLabelTheme.tres" id="4_caqnm"]
[ext_resource type="StyleBox" uid="uid://chw2w6ur351d1" path="res://Art/Themes/ThemeComponents/CardPanel.tres" id="4_rywkp"]
[ext_resource type="Texture2D" uid="uid://c8mageotyv3bm" path="res://Art/Mori no oku no kakurezato/CardGame/shot.png" id="5_nomf6"]
[ext_resource type="Texture2D" uid="uid://brmujmc45ux45" path="res://Art/Mori no oku no kakurezato/CardGame/sphere02_03.png" id="6_cckm6"]
[ext_resource type="Texture2D" uid="uid://brrkku70nlxtl" path="res://Art/UI/UI_Mobile_By_VerzatileDev/UI_MobileIndivudals_rect1-21-8-0-9-0.png" id="6_ost5g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_78q6f"]
size = Vector2(180, 270)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5wfqd"]
texture = ExtResource("6_ost5g")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[node name="CardUI" type="Control" groups=["CardGameCardUI"]]
custom_minimum_size = Vector2(180, 270)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1420.0
offset_bottom = -630.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_bsj2h")
script = ExtResource("1_uy134")
card = ExtResource("2_sqx86")
metadata/_edit_lock_ = true

[node name="Area" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
unique_name_in_owner = true
position = Vector2(90, 135)
shape = SubResource("RectangleShape2D_78q6f")

[node name="CardBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("4_rywkp")

[node name="Frame" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CardIcon" type="TextureRect" parent="Frame"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
mouse_filter = 2
texture = ExtResource("5_nomf6")
expand_mode = 3
stretch_mode = 5

[node name="IconBackground" type="Panel" parent="Frame/CardIcon"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_5wfqd")

[node name="MarginContainer" type="MarginContainer" parent="Frame"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="CardTextLabel" type="RichTextLabel" parent="Frame/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
mouse_filter = 2
theme = ExtResource("4_6q1sy")
bbcode_enabled = true
text = "CARD TEXT"
scroll_active = false

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = -1
offset_left = -5.0
offset_top = -5.0
mouse_filter = 2
texture = ExtResource("6_cckm6")
expand_mode = 5
stretch_mode = 5

[node name="CostLabel" type="RichTextLabel" parent="TextureRect"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("4_caqnm")
bbcode_enabled = true
text = "[center]2[/center]"
scroll_active = false

[connection signal="area_entered" from="Area" to="." method="_on_area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_area_area_exited"]
